--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Shiptracker
 
       <div class="navbar" style="box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); ">
         <img style="width: 100px;" src="images/shiptracker.png">
-        <a href="#section-4"> Track Package</a>
+        <a href="#tracking"> Track Package</a>
         <a href="#section-c"> Contact</a>
         <a href="#section-3"> About</a>
         <a href="index.html" class="active">Home</a>
@@ -126,7 +126,7 @@ Shiptracker
 
 
 
-  <div class="tracking"  style="padding-top: 10%; height: 90vh;">
+  <div id="tracking"  style="padding-top: 10%; height: 90vh; ">
 
 
     <div class="container">
